--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "threejs-journey-exercise",
+  "name": "My-3d-Website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,7 +8,8 @@
     "build": "vite build"
   },
   "devDependencies": {
-    "vite": "^4.0.4"
+    "vite": "^4.0.4",
+    "vite-plugin-glsl": "^1.0.2"
   },
   "dependencies": {
     "lil-gui": "^0.17.0",
